# ATLAS

./: .aider.model.metadata.json  .aider.model.settings.yml  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  atlas.conf.example  benchmark_hardening.md  doc_improve.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
api-portal/: Dockerfile  requirements.txt
atlas-proxy/: README.md  agent.go  aider_format.go  cancel_test.go  events.go  events_test.go  grammar.go  main.go  parallel.go  tools.go  types.go  v3_bridge.go
atlas-tui/: chat.go  commands.go  commands_test.go  consumer.go  files.go  go.mod  main.go  model.go  model_test.go  panes.go  state_test.go
benchmark/: README.md  __init__.py  benchmark_report_20260204_140715.md  best_of_k.py  cli.py  config.py  geo_learning.py  measure_bok_latency.sh  models.py  run_v2_benchmark.sh  runner.py  submit.py  v1_benchmark_report.md  v2_report.py  v2_runner.py  v3_runner.py
benchmarks/: AGGREGATE_REPORT.md  METHODOLOGY.md  METHODOLOGY_THINKING.md  README.md  REMAINING_BENCHMARKS.md  TIMING_ESTIMATES.md  __init__.py  check_status.sh  eval_ifbench.py  methodology_summary.md  requirements.txt  run_benchmark.sh  run_full_baseline.sh  run_lcb_v6.sh  run_suite.sh  smoke_test.sh  v301_runner.py
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_V2_5.md  CLI.md  CONFIGURATION.md  DEVELOPMENT.md  MAP.md  PLAN_MODE.md  PROTOCOL.md  SETUP.md  STORY.md  TROUBLESHOOTING.md  V2_5_ABLATION_STUDY.md  V2_TO_V2_5_MIGRATION.md  sources.md  (+1 more)
(+294 files in other folders)
